@@ -1,19 +1,12 @@
 #!/usr/bin/make -f
-# Sample debian/rules that uses debhelper.
-# GNU copyright 1997 to 1999 by Joey Hess.
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
-
-PACKAGE = partman-auto
+ARCH=$(shell dpkg-architecture -qDEB_HOST_ARCH)
 
 build:
-# Ye olde no-op.
 
 clean:
 	dh_testdir
 	dh_testroot
-	rm -f `find . -name '*~'`
 	dh_clean
 
 install: build
@@ -23,36 +16,31 @@ install: build
 	dh_install autopartition bin
 	dh_install perform_recipe bin
 	dh_install recipes.sh lib/partman
-	debian/install-rc recipes
-	debian/install-rc recipes-alpha
-	debian/install-rc recipes-arm-netwinder
-	debian/install-rc recipes-hppa
-	debian/install-rc recipes-ia64
-	debian/install-rc recipes-mips-sb1-swarm-bn
-	debian/install-rc recipes-mipsel-sb1-swarm-bn
-	debian/install-rc recipes-mipsel-cobalt
-	debian/install-rc recipes-powerpc-powermac_newworld
-	debian/install-rc recipes-powerpc-chrp_ibm
-	debian/install-rc recipes-powerpc-chrp_rs6k
-	debian/install-rc recipes-powerpc-prep
-	debian/install-rc recipes-sparc
+	if [ -d recipes-$(ARCH) ]; then \
+		debian/install-rc recipes-$(ARCH); \
+	else \
+		debian/install-rc recipes; \
+	fi
+	for sub in recipes-$(ARCH)-*; do \
+		if [ -d "$$sub" ]; then \
+			debian/install-rc $$sub; \
+		fi; \
+	done
 	debian/install-rc choose_partition
 	debian/install-rc free_space
 	debian/install-rc automatically_partition
 	debian/install-rc init.d
-	rm -rf `find debian/$(PACKAGE) -name CVS`
-	rm -rf `find debian/$(PACKAGE) -name .svn`
 
-binary-indep: build install
+binary-arch: build install
 	dh_testdir
 	dh_testroot
-	dh_installdebconf -n
+	dh_installdebconf
 	dh_fixperms
 	dh_installdeb
 	dh_gencontrol
 	dh_builddeb
 
-binary-arch: build install
+binary-indep: build install
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install
