@@ -2,8 +2,12 @@ partman-auto (46) UNRELEASED; urgency=low
 
   * Renamed multi_user scheme to just "multi" as in multiple partitions.
     There are more uses for this scheme than multi user systems.
+  * Switch package to arch all and only include recipes for the given
+    architecture and any subarches in each package.
+  * Rules file cleanups.
+  * Control file cleanups.
 
- -- Joey Hess <joeyh@debian.org>  Tue, 15 Nov 2005 19:54:27 -0500
+ -- Joey Hess <joeyh@debian.org>  Tue, 15 Nov 2005 20:00:28 -0500
 
 partman-auto (45) unstable; urgency=low
 
